# wcr

./: .gitignore  README.md
demo/: README.md
wasm-contracts/: rust-contract-ws.code-workspace
wasm-contracts/_extra/hello_macro_derive/: Cargo.toml
wasm-contracts/_extra/hello_macro_derive/src/: lib.rs
wasm-contracts/_extra/my_first_contract/: Cargo.toml
wasm-contracts/_extra/my_first_contract/src/: contract.rs  lib.rs
wasm-contracts/rust-workspace/: Cargo.toml
wasm-contracts/rust-workspace/contract-runtime/: Cargo.toml
wasm-contracts/rust-workspace/contract-runtime/src/: lib.rs
wasm-contracts/rust-workspace/contractapi/: Cargo.toml
wasm-contracts/rust-workspace/contractapi/src/: lib.rs
wasm-contracts/rust-workspace/contractapi/src/contractapi/: contract.rs  ledger.rs  mod.rs
wasm-contracts/rust-workspace/fabric_contract/src/: lib.rs
wasm-contracts/rust-workspace/fabric_contract/src/contractapi/: ledger.rs  mod.rs
wasm-contracts/rust-workspace/fabric_contract/src/runtime/: register.rs  runtime.rs
wasm-contracts/rust-workspace/my-first-contract/: Cargo.toml
wasm-contracts/rust-workspace/my-first-contract/src/: lib.rs
wasm-contracts/rust-workspace/my_first_contract/: Cargo.toml
wasm-contracts/rust-workspace/my_first_contract/src/: contract.rs  main.rs
wasm-runtimes/go-life/: .gitignore  go-life.code-workspace
wasm-runtimes/go/pkg/sumdb/sum.golang.org/: latest
wasm-runtimes/nodejs/: .eslintrc  callcontext.js  compiled.js  go.sh  index.js  message.proto  package-lock.json  package.json  rpc.js  wasm_pcruntime.js  wasmchaincode.js
(+26 files in other folders)
