[package]
name = "contract-runtime"
version = "0.1.0"
authors = ["Matthew B White <whitemat@uk.ibm.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# Optimize for small code size
opt-level = "s"

[dependencies]
wapc-guest = "0.2.0"
contractapi = { path = "../contractapi" }
my-first-contract = { path = "../my-first-contract" }